# veclite

./: .editorconfig  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  book.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: architect.md  code-reviewer.md  docs-writer.md  implementer.md  performance-engineer.md  quality-gatekeeper.md  tester.md
.claude/commands/: rulebook-learn-capture.md  rulebook-learn-list.md
.claude/hooks/: enforce-pre-tool.sh  protect-task-scaffolding.sh
.claude/rules/: consult-analysis-before-implementing.md  mcp-tool-reference.md  rust.md  session-workflow.md
.claude/workflows/: bugfix.js  feature-pipeline.js  release-gate.js  review-fanout.js  rulebook-driver.js  spec-author.js
.github/workflows/: codespell.yml  rust-lint.yml  rust-test.yml  veclite-api-freeze.yml  veclite-bench.yml  veclite-bindings-go-csharp.yml  veclite-checks.yml  veclite-clean-install.yml  veclite-coverage.yml  veclite-crash.yml  veclite-packaging.yml  veclite-release-onnx.yml  veclite-release.yml  veclite-sanitizers.yml  veclite-wasm.yml
.rulebook/: rulebook.json
.rulebook/decisions/: 001-vendor-engine-code-from-vectorizer-instead-of-depending-on-vectorizer-core.md  001-vendor-engine-code-from-vectorizer-instead-of-depending-on-vectorizer-core.metadata.json  002-hnsw-index-is-native-only-hnsw-rs-is-target-gated-off-wasm32.md  002-hnsw-index-is-native-only-hnsw-rs-is-target-gated-off-wasm32.metadata.json  003-mmap-as-primary-store-and-hnsw-graph-persistence-deferred-while-hnsw-rs-is-the-index.md  (+2 more)
.rulebook/specs/: AGENT_AUTOMATION.md  (+5 more)
bench/: .gitignore  README.md  harness.py  requirements.txt
crates/veclite/: Cargo.toml  public-api.txt
crates/veclite-cli/: Cargo.toml  README.md
crates/veclite-cli/src/: main.rs
crates/veclite-cli/tests/: cli.rs
crates/veclite-cli/tests/snapshots/: help.txt  help_export.txt  help_import.txt  help_inspect.txt  help_snapshot.txt  help_vacuum.txt  help_verify.txt
crates/veclite-ffi/: Cargo.toml  README.md  cbindgen.toml  veclite.h
crates/veclite-ffi/src/: lib.rs
crates/veclite-ffi/tests/: ffi.rs  ffi_errors.rs  ffi_full_surface.rs  ffi_search_text.rs  header_drift.rs
crates/veclite-node/: .gitignore  Cargo.toml  README.md  build.rs  clean_install_e2e.sh  index.d.ts  index.js  package-lock.json  package.json  veclite.d.ts  veclite.js
crates/veclite-node/__test__/: leak_and_zerocopy.test.mjs  veclite.test.mjs
crates/veclite-node/npm/darwin-arm64/: README.md  package.json
crates/veclite-node/npm/darwin-x64/: README.md  package.json
crates/veclite-node/npm/linux-arm64-gnu/: README.md  package.json
crates/veclite-node/npm/linux-x64-gnu/: README.md  package.json
crates/veclite-node/npm/linux-x64-musl/: README.md  package.json
crates/veclite-node/npm/win32-x64-msvc/: README.md  package.json
crates/veclite-node/src/: lib.rs
crates/veclite-py/: .gitignore  Cargo.toml  README.md  pyproject.toml  wheel_e2e.sh
crates/veclite-py/python/veclite/: __init__.py  aio.py
crates/veclite-py/src/: lib.rs
crates/veclite-py/tests/: test_aio.py  test_gil.py  test_register_embedder.py  test_veclite.py  test_zero_copy.py
crates/veclite-wasm/: .gitignore  Cargo.toml  README.md  build-pkg.sh  package.json
crates/veclite-wasm/__test__/: veclite.test.mjs
crates/veclite-wasm/examples/: quickstart.mjs
crates/veclite-wasm/js/: index.d.ts  index.js
crates/veclite-wasm/pkg/: veclite_core.d.ts  veclite_core.js  veclite_core_bg.wasm.d.ts  veclite_fallback.wasm  veclite_simd.wasm
crates/veclite-wasm/src/: lib.rs
crates/veclite/benches/: veclite_bench.rs
crates/veclite/examples/: quickstart.rs
crates/veclite/src/: chunk.rs  collection.rs  database.rs  error.rs  fuzz_api.rs  hybrid.rs  lib.rs  options.rs  point.rs  query.rs  recall.rs
crates/veclite/src/embedding/: bm25.rs  bow.rs  char_ngram.rs  fastembed.rs  mod.rs  svd.rs  tfidf.rs
crates/veclite/src/filter/: index.rs  mod.rs
crates/veclite/src/index/: mod.rs
crates/veclite/src/interop/: config.rs  export.rs  import.rs  inspect.rs  mod.rs  model.rs  verify.rs  vocab.rs
crates/veclite/src/persist/: config.rs  mod.rs  seal.rs  wal_body.rs
crates/veclite/src/quantization/: binary.rs  mod.rs  product.rs  scalar.rs  traits.rs
crates/veclite/src/simd/: backend.rs  dispatch.rs  mod.rs  scalar.rs
crates/veclite/src/storage/: body.rs  compression.rs  gates.rs  header.rs  iddir.rs  image.rs  mmap.rs  mod.rs  pager.rs  segment.rs  toc.rs  vectors.rs  wal.rs
crates/veclite/tests/: api.rs  auto_embed.rs  concurrency.rs  coverage_gaps.rs  crash_safety.rs  database_replay.rs  embedding_lifecycle.rs  embedding_parity.rs  embedding_providers.rs  filters.rs  fuzz_regression.rs  golden.rs  hybrid.rs  hybrid_conformance.rs  hybrid_persistence.rs  image_interchange.rs  loom_toc_swap.rs  mmap_tier.rs  model_equivalence.rs  onnx_degradation.rs  onnx_embeddings.rs  parity.rs  payload_index_runtime.rs  persist_roundtrip.rs  persistence.rs  recovery_registry.rs  search.rs  surface_edges.rs
crates/veclite/tests/compat/golden/: v1.veclite
crates/veclite/tests/fixtures/: embedding_parity.json  hybrid_rrf_conformance.json  onnx_degradation.veclite
docs/: COVERAGE.md  DAG.md  PRD.md  benchmarks.md  c-abi.md
examples/: quickstart.mjs  quickstart.py
ffi/: smoke.c  smoke.sh
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/config/: seed-000
fuzz/corpus/filter/: seed-000  seed-001  seed-002
fuzz/corpus/header/: seed-000
fuzz/corpus/image/: seed-000  seed-001
fuzz/corpus/segment/: seed-000  seed-001  seed-002  seed-003  seed-004  seed-005  seed-006  seed-007  seed-008  seed-009  seed-010
fuzz/corpus/toc/: seed-000
fuzz/corpus/wal/: seed-000
fuzz/fuzz_targets/: config.rs  filter.rs  header.rs  image.rs  segment.rs  toc.rs  wal.rs
fuzz/regressions/image/: zero-dim-vectors-capacity-overflow
fuzz/regressions/toc/: deep-nesting-stack-overflow
xtask/: Cargo.toml
xtask/src/: api_freeze.rs  conformance.rs  coverage.rs  docs.rs  fuzz.rs  graduation.rs  main.rs  sanitize.rs  soak.rs
(+330 files in other folders)
