[workspace]
resolver = "2"
members = ["crates/veclite", "crates/veclite-ffi", "xtask"]
# The Python binding links libpython (PyO3) and is built by maturin, not by the
# workspace `--workspace` jobs; exclude it so those stay pure-Rust.
exclude = ["crates/veclite-py"]
# Default commands (build/test/clippy without -p) target the library only; xtask
# is a native dev tool (it uses std::process and cannot build for wasm32), so it
# is opted out of the default set and the wasm CI job builds `-p veclite`.
default-members = ["crates/veclite"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Own MSRV (REL-002, ADR-0001). Edition 2024 floors at 1.85, but the pinned
# `hnsw_rs =0.3.4` (CORE-030) uses `is_multiple_of` (stable in 1.87), so 1.87 is
# the true minimum. Raise this only when a dependency or feature forces it.
rust-version = "1.87"
license = "Apache-2.0"
repository = "https://github.com/hivellm/veclite"

[workspace.dependencies]
thiserror = "2.0"
dashmap = "6.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ANN index: exact pin — hnsw_rs graph serialization stability is not
# guaranteed upstream (SPEC-001 CORE-030). Native-only (ADR-0002).
hnsw_rs = "=0.3.4"
rayon = "1.10"
proptest = "1.6"
criterion = { version = "0.5", default-features = false }
# Storage layer (SPEC-002, native-only — wasm has no file storage, CORE-004).
rmp-serde = "1.3"
lz4_flex = "0.13"
zstd = "0.13"
crc32fast = "1.4"
roaring = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
uuid = { version = "1", features = ["v4"] }
fs4 = "0.13"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
