[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Native-only dev-task runner (SPEC-015 §7): `cargo xtask crash`. Not shipped,
# not part of the default workspace build, never targets wasm32.
[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = "0.9.34"
# `vecdb-interop` powers `cargo xtask graduation` (SPEC-013 §4 / TST-032);
# `fuzzing` powers `cargo xtask fuzz-seed` / `fuzz` (SPEC-015 TST-050).
veclite = { workspace = true, features = ["vecdb-interop", "fuzzing"] }

[lints]
workspace = true
