[package]
name = "veclite-node"
description = "Node.js binding for VecLite (SPEC-010)."
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "Apache-2.0"
repository = "https://github.com/hivellm/veclite"

[lib]
crate-type = ["cdylib"]

[features]
# Opt-in dense embeddings (SPEC-005 §6). Off by default so the base npm package
# stays lean and network-free (NFR-08); `@veclite/onnx` is this crate built
# `napi build --features onnx` (SPEC-016 REL-021).
onnx = ["veclite/onnx"]

[dependencies]
veclite = { package = "hivellm-veclite", path = "../veclite" }
# napi-rs 2.x LTS: the native N-API bridge. `napi4` enables the threadsafe /
# AsyncTask features used for the non-blocking async surface (NODE-011).
napi = { version = "2", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "serde-json",
] }
napi-derive = "2"
serde_json = "1.0"
# The async surface (NODE-011) hands blocking VecLite calls to tokio's blocking
# pool via `spawn_blocking`; napi drives the returned futures on its runtime.
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
