[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "veclite"
description = "Embedded, single-file, in-process vector database."
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database :: Database Engines/Servers",
]
dynamic = ["version"]

[project.optional-dependencies]
numpy = ["numpy>=1.21"]

[tool.maturin]
# abi3 wheel: one wheel works on CPython 3.9+ with no Rust toolchain (PY-001).
features = ["pyo3/abi3-py39"]
