[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
# Distribution name is org-prefixed (plain `veclite` on PyPI is an unrelated
# SQLite ORM). The import name stays `veclite` via `python-source` below, so
# user code is unaffected: `pip install hivellm-veclite` → `import veclite`.
name = "hivellm-veclite"
description = "Embedded, single-file, in-process vector database."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database :: Database Engines/Servers",
]
dynamic = ["version"]

[project.optional-dependencies]
numpy = ["numpy>=1.21"]

[tool.maturin]
# abi3 wheel: one wheel works on CPython 3.9+ with no Rust toolchain (PY-001).
features = ["pyo3/abi3-py39"]
# Mixed layout: the compiled extension is `veclite._veclite`; the pure-Python
# `veclite` package in python/ re-exports it and adds `veclite.aio` (PY-031).
python-source = "python"
module-name = "veclite._veclite"
