[package]
name = "veclite"
description = "Embedded, single-file, in-process vector database."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["vector-database", "embeddings", "search", "embedded", "hnsw"]
categories = ["database", "data-structures"]

[features]
default = ["simd"]
# Selects the vendored SIMD distance kernels (ADR-0001: vendored from
# hivellm/vectorizer, no external dependency). Phase1b vendors the scalar
# backend only; with or without this feature the engine resolves to the
# scalar oracle until the ISA backends land (follow-up task).
simd = []
# Product quantization (vendored, off by default). Not wired into the public
# Quantization enum yet; kept byte-identical for future interop.
pq = []

[dependencies]
thiserror.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
serde = { workspace = true }
serde_json.workspace = true

# Native-only: hnsw_rs (and its rayon/mmap/cpu-time deps) cannot build on
# wasm32; the index module is cfg-gated off wasm32 to keep CORE-004 green
# (ADR-0002).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hnsw_rs = { workspace = true }
rayon = { workspace = true }
# Storage layer (SPEC-002). zstd links a C library and none of these are
# needed on wasm32 (no file storage there — CORE-004), so the whole set is
# native-only alongside the storage module gate in lib.rs.
rmp-serde = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
crc32fast = { workspace = true }
roaring = { workspace = true }
xxhash-rust = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest.workspace = true
criterion = { workspace = true }

[[bench]]
name = "veclite_bench"
harness = false

[lints]
workspace = true
