[package]
name = "veclite"
description = "Embedded, single-file, in-process vector database."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["vector-database", "embeddings", "search", "embedded", "hnsw"]
categories = ["database", "data-structures"]

[features]
default = ["simd"]
# Selects the vendored SIMD distance kernels (ADR-0001: vendored from
# hivellm/vectorizer, no external dependency). Phase1b vendors the scalar
# backend only; with or without this feature the engine resolves to the
# scalar oracle until the ISA backends land (follow-up task).
simd = []
# Product quantization (vendored, off by default). Not wired into the public
# Quantization enum yet; kept byte-identical for future interop.
pq = []
# The `svd` embedding provider (SPEC-005 §2): TF-IDF + truncated-SVD-style
# projection, vendored from the server with its ndarray Array2 replaced by a
# plain Vec matrix (same math, zero extra dependencies).
svd = []
# Opt-in dense neural embeddings (SPEC-005 §6, EMB-040): pulls `fastembed` →
# ONNX Runtime. NEVER in the default build — base installs stay lean and
# network-free (NFR-08); heavy artifacts ship separately (SPEC-016 REL-021).
# wasm32 excludes it unconditionally (EMB-042): `fastembed` is declared only in
# the non-wasm target table below, and the provider code is cfg-gated off wasm32.
onnx = ["dep:fastembed"]
# `.vecdb` interop (SPEC-013) + the file-integrity surface behind the `veclite`
# CLI (SPEC-014). Native-only (the archive is filesystem I/O); off by default so
# the library dependency tree stays lean — the CLI crate turns it on.
vecdb-interop = ["dep:zip", "dep:flate2", "dep:sha2"]

[dependencies]
thiserror.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
serde = { workspace = true }
serde_json.workspace = true
# Portable segment codec (SPEC-002 §3): the pure-Rust encoders shared by the
# native pager and the wasm in-memory image codec (WASM-010) — MessagePack
# bodies, LZ4 compression, CRC framing, roaring slot bitmaps (PIDX/tombstones),
# and xxhash id-directory bucketing. All build cleanly on wasm32.
rmp-serde = { workspace = true }
lz4_flex = { workspace = true }
crc32fast = { workspace = true }
roaring = { workspace = true }
xxhash-rust = { workspace = true }

# Native-only: hnsw_rs (and its rayon/mmap/cpu-time deps) cannot build on
# wasm32; the index module is cfg-gated off wasm32 to keep CORE-004 green
# (ADR-0002). zstd links a C library; memmap2/fs4 are the file read/lock path;
# uuid pulls getrandom — none are needed by the wasm image path.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hnsw_rs = { workspace = true }
rayon = { workspace = true }
zstd = { workspace = true }
uuid = { workspace = true }
fs4 = { workspace = true }
memmap2 = { workspace = true }
# Opt-in only (the `onnx` feature) and native-only (ONNX Runtime + reqwest do not
# build on wasm32, EMB-042). Off by default, so the base tree has no ONNX/network
# crates (NFR-08).
fastembed = { version = "5", optional = true }
# `.vecdb` interop only (the `vecdb-interop` feature): ZIP/DEFLATE archive
# container, gzip Legacy layout, SHA-256 `.vecidx` checksums (SPEC-013).
zip = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
criterion = { workspace = true }

[[bench]]
name = "veclite_bench"
harness = false

[lints]
workspace = true
